test/distributions/sungeun/misc/no_use_BlockDist.good
no_use_BlockDist.chpl:3: error: invalid use of 'new' on Block
